[package]
name = "nixop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls", "blocking" ] }
bytes = "1"
sha2 = "0.10"
tar = { version = "0.4", default-features = false }
sys-mount = { version = "1.5", default-features = false }
serde_yaml = "0.8"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
flate2 = "1.0"
